# personal-Flinchy-Finch

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: AI_manager.h  AI_player.h  agent_manager.h  ai_manager.h  ai_player.h  animation.h  difficulty.h  game.h  game_state.h  genome.h  ground.h  mode.h  node.h  node_type.h  pipe.h  pipe_controller.h  pipe_manager.h  player.h  player_manager.h  synapse.h  utils.h
src/: AI_manager.cpp  AI_player.cpp  animation.cpp  game.cpp  genome.cpp  ground.cpp  main.cpp  node.cpp  pipe.cpp  pipe_controller.cpp  pipe_manager.cpp  player.cpp  player_manager.cpp  utils.cpp
tests/: CMakeLists.txt  genome_test.cpp
